adds escrow full solution

--- a/Prerequisites/paulx-escrow-contract/Cargo.toml
+++ b/Prerequisites/paulx-escrow-contract/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 solana-program = "1.14.13"
+thiserror = "1.0.38"
+spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
+arrayref = "0.3.6"
 
 [lib]
 crate-type = ["cdylib", "lib"]
